# mailServer

./: .gitignore  Alec Snyder.priv  Alec Snyder.pub  Encrypt.hs  KeyGen  KeyGen.hs  README.md  Server.hs  alsnyder.priv  alsnyder.pub  client.db  empty.db  emptyClient.db  mailClient.hs  mailEvilDemo.hs  mailServer.cabal  server.db  server.pub  skynet.priv
docs/: EncryptLibrary.md  KeyGen.md  Server.md  client.md  testing.md
src/: Encrypt.hs  EncryptMail.hs  KeyGen.hs  Server.hs  mailClient.hs
test/: TestMail.hs  Testing.priv  Testing.pub  runTestServer.txt  runTests.txt  trans4.err.txt
test/servertest/: init.db  server.db  testServer.priv  testServer.pub
test/test1client/: client.db  comm1.txt  comm2.txt  test1.priv  test1.pub  trans1.txt  trans1err.txt  trans2.txt
test/test2client/: client.db  comm2.txt  test2.priv  test2.pub  trans2.txt
test/test3client/: client.db  comm3.txt  init.db  test3.priv  test3.pub  trans3.txt
test/test4client/: init.db  test4.priv  test4.pub  trans4.err.txt
