-- Alec Snyder
-- chat server lab 2
name:           mailServer
version:        1.0.0
license-file:   LICENSE
author:         Alec Snyder
maintainer:     alsnyder@uchicago.edu
synopsis:       An encrypted mail server environment
description:    A simple mail server and client to send encrypted mail to peers
build-type:     Simple
cabal-version:  >= 1.10
category:       System

extra-source-files:
  README.md
  ,.gitignore

library
  hs-source-dirs: src
  exposed-modules:
    Encrypt
  build-depends:
    base
    ,cryptohash
    ,bytestring
    ,cipher-aes
    ,time
    ,random
  default-language: Haskell2010
  ghc-options: -Wall

executable server
  hs-source-dirs: src
  main-is: Server.hs
  build-depends:
    base
   ,network
   ,cryptohash
   ,time
   ,containers
   ,bytestring
   ,cipher-aes
   ,directory
   ,random
   ,readline
  default-language: Haskell2010
  ghc-options: -Wall

executable client
  hs-source-dirs: src
  main-is: mailClient.hs
  build-depends:
    base
   ,network
   ,cryptohash
   ,containers
   ,directory
   ,random
   ,cipher-aes
   ,time
   ,readline
   ,bytestring
  default-language: Haskell2010
  ghc-options: -Wall

--test-suite test-chat
--  hs-source-dirs: test
--  main-is: TestChat.hs
--  type: exitcode-stdio-1.0
--  build-depends:
--    base < 5
--   ,chat
--   ,hspec
--   ,network
--  default-language: Haskell2010
--  ghc-options: -Wall
