-- Alec Snyder
-- mail server lab 2
name:           encryptMail
version:        1.0.0
license-file:   LICENSE
author:         Alec Snyder
maintainer:     alsnyder@uchicago.edu
synopsis:       A simple encrypted mail server and client
description:    A simple encrypted mail server and client
build-type:     Simple
cabal-version:  >= 1.10
category:       System

extra-source-files:
  README.md
  ,.gitignore
  ,docs/*.md
  ,test/*.txt
  ,test/*.priv
  ,test/*.pub
  ,test/servertest/init.db
  ,test/servertest/*.priv
  ,test/servertest/*.pub
  ,test/test1client/init.db
  ,test/test1client/*.priv
  ,test/test1client/*.pub
  ,test/test1client/*.txt
  ,test/test2client/init.db
  ,test/test2client/*.priv
  ,test/test2client/*.pub
  ,test/test2client/*.txt
  ,test/test3client/init.db
  ,test/test3client/*.priv
  ,test/test3client/*.pub
  ,test/test3client/*.txt
  ,test/test4client/init.db
  ,test/test4client/*.priv
  ,test/test4client/*.pub
  ,test/test4client/*.txt

library
  hs-source-dirs: src
  exposed-modules:
    EncryptMail
  build-depends:
    base
    ,bytestring
    ,cipher-aes
    ,random
    ,cryptohash
    ,time
  default-language: Haskell2010
  ghc-options:

executable Server
  hs-source-dirs: src
  main-is: Server.hs
  build-depends:
    base
   ,encryptMail
   ,bytestring
   ,readline
   ,random
   ,network
   ,directory
   ,containers
   ,time
   ,cipher-aes
   ,cryptohash
  default-language: Haskell2010
  ghc-options:

executable Client
  hs-source-dirs: src
  main-is: mailClient.hs
  build-depends:
    base
   ,encryptMail
   ,bytestring
   ,time
   ,network
   ,readline
   ,random
   ,directory
   ,containers
   ,cryptohash
   ,cipher-aes
  default-language: Haskell2010
  ghc-options:

executable KeyGen
  hs-source-dirs: src
  main-is: KeyGen.hs
  build-depends:
    base
   ,encryptMail
   ,random
   ,cryptohash
   ,cipher-aes
   ,bytestring
   ,time
  default-language: Haskell2010
  ghc-options:

test-suite test-chat
  hs-source-dirs: test
  main-is: TestMail.hs
  type: exitcode-stdio-1.0
  build-depends:
    base
   ,encryptMail
   ,random
   ,hspec
   ,QuickCheck
   ,containers
   ,bytestring
  default-language: Haskell2010
  ghc-options:
